<resources>
    <!-- global -->
    <string name="app_name">app name</string>
    <string name="symbol">Symbol</string>
    <string name="probability">Probability</string>
    <string name="probability_percent">Probability(%)</string>

    <!-- tool_bar -->
    <string name="drawer_open">drawer open</string>
    <string name="drawer_close">drawer close</string>
    <string name="top_menu">Top Menu</string>
    <string name="shannon_coding">Shannon Coding</string>
    <string name="shannon_fano_coding">Shannon-Fano Coding</string>
    <string name="encode_decode">Encode/Decode</string>

    <!-- fragment_top -->
    <string name="info_button">Info</string>

    <!-- activity_top -->
    <string name="top_text">Welcome to learning\n data compression app</string>
    <string name="help_button">Help</string>
    <string name="start_button">Start</string>

    <!-- activity_input_number -->
    <string name="input_number_of_symbol">Input number of symbol</string>
    <string name="max_number">Maximum number is %s</string>
    <string name="next_button">Next</string>

    <!-- activity_input_character -->
    <string name="calc_button">Calc</string>

    <!-- activity_quiz -->
    <string name="check_button">Check</string>
    <string name="hint_button">Hint</string>

    <!-- activity_result -->
    <string name="i">i</string>
    <string name="binary">Binary(6 digit)</string>
    <string name="length">Length</string>
    <string name="codeword">Codeword</string>
    <string name="result">Result</string>
    <string name="pre_probability_description">Sum of pre probability</string>
    <string name="encode_decode_button">Encode Decode</string>
    <string name="top_button">Top</string>

    <!-- activity_encode_decode -->
    <string name="source_text">Source text</string>
    <string name="encode_button">Encode</string>
    <string name="decode_button">Decode</string>

    <!-- error_dialog -->
    <string name="error_input_check">Please input all.</string>
    <string name="error_num_check">"Number should be less than %s.</string>
    <string name="error_probability_check">Sum of probability should be 100%.</string>
    <string name="error_unique_check">Character should be unique.</string>
    <string name="error_encode_check">Can not encode.</string>
    <string name="error_decode_check">Can not decode.</string>

    <!-- dialog -->
    <string name="congratulation">Congratulation!</string>
    <string name="all_correct">All are Correct!</string>
    <string name="wrong_answer">Check hint and try again!</string>

    <!-- shannon hint -->
    <string name="hint_shannon_preprobability">This formula stands for cumulative probabilities.</string>
    <string name="hint_shannon_binary">Make cumulative probabilities a decimal number and make it a binary number.</string>
    <string name="hint_shannon_length">Length is minus of the absolute value of probability log2.</string>
    <string name="hint_shannon_codeword">Codeword is assigned by taking the first value of length bits from the binary expansions.</string>

    <!-- shannon fano hint -->
    <string name="hint_shannon_fano">Split symbols in two places where the sum of the probabilities of each set is as equal as possible, and assign \"0\" to one of the divided sets and \"1\" to the other set.</string>

    <!-- menu -->
    <string name="menu_how_to_use">How to use</string>
    <string name="menu_about_this_app">About this app</string>
    <string name="menu_description">Description of algorithms</string>

    <!-- quiz -->
    <string name="easy">Easy</string>
    <string name="normal">Normal</string>
    <string name="hard">Hard</string>

    <!-- description algorithms -->
    <string name="description_shannon">
        " Shannon coding is a lossless data compression technique devised by Claude Shannon.\n"
        "This method has made progress in the field of information theory. \n"
        "Although our daily life is largely influenced by digital data, this is impossible without coding the scene of Shannon coding. \n"
    </string>

    <string name="html_algorithm_shannon">
        "1. Arrange symbols in descending order of appearance.&lt;br&gt;&lt;br&gt;"
        "2. For each symbol, obtain the cumulative probability up to the preceding symbol. &lt;br&gt; ( &lt;img src=formula_sum_probability&gt; )&lt;br&gt;&lt;br&gt;"
        "3. Make the value of 2 to binary.&lt;br&gt;&lt;br&gt;"
        "4. Assigned codewords by taking the first &lt;img src=formula_length style="vertical-align:middle"&gt; bits from the value of 3.&lt;br&gt;"
    </string>

    <string name="html_description_shannon_fano">
        " Shannon-Fano coding is a lossless data compression technique devised by Claude Shannon and Robert Fano.&lt;br&gt;"
        "This method construct a prefix code based on a set of symbols and their probabilities.&lt;br&gt;"
        "It guarantees that all code word lengths are within one bit of their theoretical ideal &lt;img src=formula_log_p&gt;. &lt;br&gt;"
    </string>

    <string name="algorithm_shannon_fano">
        "1. Rearrange the symbols in descending order of appearance probability from low probability.\n\n"
        "2. Split it in two places where the sum of the probabilities of each set is as equal as possible.\n\n"
        "3. Assign \"0\" to one of the divided sets and \"1\" to the other set, and make it the first digit of the code.\n\n"
        "4. Each of the two sets formed by division is further divided into two, and 0 and 1 are assigned in the same way.\n\n"
        "   This operation is performed until the number of symbols included in each set becomes one.\n"
    </string>

    <!-- information activity -->
    <string name="description_about_this_app">
        "The purpose of this application is to help learning the data compression algorithms.\n"
        "\n"
        "This application was developed by Mohamed Hamada and his students at the University of Aizu.\n"
        "For more information or comments, you can contact members of Hamada's Lab at \n"
    </string>

    <string name="email_hamada">
        "Email: hamada@u-aizu.ac.jp\n"
    </string>

    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="start">Start!</string>
    <string name="tutorial_1">"Choose algorithm"</string>
    <string name="tutorial_2">"Choose quiz difficulty level"</string>
    <string name="tutorial_3">"Input Information"</string>
    <string name="tutorial_4">"Challenge the Quiz"</string>
    <string name="tutorial_5">"Encode and Decode"</string>

</resources>
