<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginEnd="@dimen/padding_normal"
    android:layout_marginStart="@dimen/padding_normal"
    android:layout_marginTop="@dimen/padding_toolbar"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_normal"
        android:text="@string/menu_about_this_app"
        android:textSize="@dimen/app_text_size_title" />

    <TextView
        android:id="@+id/text_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_normal"
        android:layout_marginTop="@dimen/padding_normal"
        android:lineSpacingExtra="@dimen/spacing_micro"
        android:text="@string/description_about_this_app"
        android:textSize="@dimen/app_text_size_medium" />

    <TextView
        android:id="@+id/text_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_normal"
        android:lineSpacingExtra="@dimen/spacing_micro"
        android:text="@string/email_hamada"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/app_text_size_large" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_large"
        android:layout_marginEnd="@dimen/padding_normal"
        android:layout_marginStart="@dimen/padding_normal"
        android:layout_marginTop="@dimen/padding_normal"
        app:srcCompat="@drawable/logo_u_aizu" />

</LinearLayout>